tdf#113213 sw UI: clear restart numbering when add-to-list

When you join a different list to the prior list in the document,
it is extremely likely that you do not want the numbering
to restart. That restart belonged to the old list,
and isn't expected to remain when changing to join
a different list.

Change-Id: I3bc78dceea6b95869d7c0742eed0eda126392588